--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <td style="text-align: right;">€65,900,000</td>
           </tr>
           <tr>
-            <td>Long-term liabilities</td>
+            <td>Long-term Liabilities</td>
             <td style="text-align: right;">€226,400,000 <span class="material-icons" style="color: green;">arrow_upward</span> (1.03%)</td>
             <td style="text-align: right;">€224,100,000</td>
           </tr>
@@ -309,7 +309,7 @@
             <td style="text-align: right;">€-29,700,000</td>
           </tr>
           <tr>
-            <td>Cash flow</td>
+            <td>Cash Flow</td>
             <td style="text-align: right;">€20,700,000 <span class="material-icons" style="color: green;">arrow_upward</span> (23.95%)</td>
             <td style="text-align: right;">€16,700,000</td>
           </tr>
@@ -393,7 +393,7 @@
             <p><b>Analyst Name:</b> SYSTEM</p>
             <p><b>Decision:</b> Maintain As Is</p>
             <p><b>Decision Date:</b> 25-Jan-2024</p>
-            <p><b>Comments:</b> Closing this alert as a this is a false positive alert INC -INC015070894</p>
+            <p><b>Comments:</b> Closing this alert as this is a false positive alert INC -INC015070894</p>
             <hr>
             <h4>Alert Date: 03-Oct-2023</h4>
             <p><b>Rules Triggered:</b></p>
@@ -573,7 +573,7 @@
         collectedData.push(sectionData);
       });
       collectedData.push({
-        "visual Words": "anything related to visual or chart words in the input then I need data in the json format {chart,data} and data should be fit for line, bar, graph, pie. I don't want any comments in the data such as // I want plain json with proper json fromat {chart:bar/line/graph,data{we have categories,values,label..}}, validate json format before genrating."
+        "visual Words": "anything related to visual or chart words in the input then I need data in the json format {chart,data} and data should be fit for line, bar, graph, pie. I don't want any comments in the data such as // I want plain json with proper json format {chart:bar/line/graph,data{we have categories,values,label..}}, validate json format before generating."
       });
 
       fetch('/initialize', {
