--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </ol>
         </li>
         <li>CreditSafe Score: <b>68 (Low Risk)</b></li>
-        <li>CreditSafe Additional Commentry:
+        <li>CreditSafe Additional Commentary:
           <ul style="margin-left: 35px;">
             <li>This company has been treated as a PLC company in terms of the score/limit that has been generated.</li>
             <li>This company's Asset Ratio shows a high amount of cover on outstanding obligations.</li>
