--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </ol>
         </li>
         <li>CreditSafe Score: <b>68 (Low Risk)</b></li>
-        <li>CreditSafe Additional Commentary:
+        <li>CreditSafe Additional Commentry:
           <ul style="margin-left: 35px;">
             <li>This company has been treated as a PLC company in terms of the score/limit that has been generated.</li>
             <li>This company's Asset Ratio shows a high amount of cover on outstanding obligations.</li>
@@ -344,7 +344,7 @@
               <th>Details</th>
             </tr>
           </thead>
-          <tbody id="suggest-comments-body">
+          <tbody id="suggestions-body">
             <!-- Suggestions will be populated here -->
           </tbody>
         </table>
@@ -490,6 +490,7 @@
       }
     }
 
+
     // Function to display charts
     function displayCharts(data) {
       console.log("Displaying chart with data:", data);
@@ -524,7 +525,7 @@
             legend: { position: 'top' },
             title: { display: true, text: `Chart Type: ${data.chart}` },
           },
-          scales: { y: { beginAtZero: true } },
+          scales: { y: { beginAtZero: false } },
         },
       };
 
@@ -588,14 +589,42 @@
         collectedData.push(sectionData);
       });
       collectedData.push({
-        "visual Words": "anything related to visual or chart words in the input then I need data in the json format {chart,data} and data should be fit for line, bar, graph, pie and without label json. I don't want any comments in the data such as // I want plain json with proper json format, validate json format before generating."
+        "visual Words": "anything related to visual or chart words in the input then I need data in the json format {chart,data} and data should be fit for line, bar, graph, pie. I don't want any comments in the data such as // I want plain json with proper json format {chart:bar/line/graph,data{we have categories,values,label..}}, validate json format before generating."
       });
 
-      return collectedData;
+      fetch('/initialize', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ data: collectedData })
+      })
+      .then(response => response.json())
+      .then(data => {
+        console.log('Initialization response:', data);
+      })
+      .catch(error => console.error('Error during initialization:', error));
     }
 
     // Function to get recommendations
-    function getRecommendations(collectedData) {
+    function getRecommendations() {
+      const sections = document.querySelectorAll('section.collect');
+      const collectedData = [];
+
+      sections.forEach(section => {
+        const headers = section.querySelectorAll('h1, h2, h3, h4, h5');
+        const sectionData = {};
+        headers.forEach(header => {
+          const headerText = header.textContent;
+          const childData = [];
+          let sibling = header.nextElementSibling;
+          while (sibling && !sibling.matches('h1, h2, h3, h4, h5')) {
+            childData.push(sibling.textContent);
+            sibling = sibling.nextElementSibling;
+          }
+          sectionData[headerText] = childData;
+        });
+        collectedData.push(sectionData);
+      });
+
       fetch('/recommend', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
@@ -603,44 +632,18 @@
       })
       .then(response => response.json())
       .then(data => {
-        const recommendationsContainer = document.getElementById('suggest-comments-body');
+        const recommendationsContainer = document.getElementById('suggestions-body');
         if (recommendationsContainer) {
           recommendationsContainer.innerHTML = '';
 
-          let jsonData;
-          try {
-            const jsonString = data.recommendations.join('');
-            jsonData = JSON.parse(jsonString);
-            console.log(jsonData);
-          } catch (error) {
-            console.error("Error parsing JSON response:", error);
-            addMessage('Chatbot', "Error parsing JSON response. Please check the data format.");
-            return;
-          }
+          data.recommendations.forEach(line => {
+            const trimmed = line.trim();
+            if (!trimmed) return;
 
-          const comments = [];
-          for (const category in jsonData) {
-            let categoryComments = [];
-            const details = jsonData[category];
-
-            if (typeof details === 'object' && !Array.isArray(details)) {
-              const detailComments = Object.values(details).map(value => {
-                if (Array.isArray(value)) {
-                  return value.join(', ');
-                }
-                return value;
-              }).join(', ');
-              categoryComments.push(detailComments);
-            } else if (Array.isArray(details)) {
-              categoryComments.push(details.map(item => Object.values(item).join(', ')).join(', '));
-            }
-
-            comments.push({ category: category, comment: categoryComments.join(', ') });
-          }
-
-          comments.forEach(comment => {
+            const parsed = trimmed.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
             const row = document.createElement('tr');
-            row.innerHTML = `<td>${comment.category}</td><td>${comment.comment}</td>`;
+            const [category, details] = parsed.split(':');
+            row.innerHTML = `<td>${category}</td><td>${details}</td>`;
             recommendationsContainer.appendChild(row);
           });
         }
@@ -650,8 +653,8 @@
 
     // Initialize on window load
     window.onload = function () {
-      const collectedData = collectHeadersAndData();
-      getRecommendations(collectedData);
+      collectHeadersAndData();
+      getRecommendations();
       addMessage('Chatbot', 'This chatbot is designed by Fiserv.');
     };
   </script>
